// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile renders component with user data without crashing 1`] = `
<Fragment>
  <styled.div>
    <Styled(Card)
      title={
        <styled.img
          src=""
        />
      }
    >
      <styled.p />
      <styled.p />
    </Styled(Card)>
    <Styled(Card)
      title={
        <div>
          User Info 
          <Button
            block={false}
            ghost={false}
            htmlType="button"
            loading={false}
            onClick={[Function]}
          >
            Edit
          </Button>
        </div>
      }
    >
      <Descriptions>
        <styled.div>
          <Styled(DescriptionsItem)
            label="Country"
          >
            Country
          </Styled(DescriptionsItem)>
          <Styled(DescriptionsItem)
            label="Gender"
          >
            Gender
          </Styled(DescriptionsItem)>
        </styled.div>
      </Descriptions>
    </Styled(Card)>
  </styled.div>
</Fragment>
`;

exports[`UserProfile renders component with user name data without crashing 1`] = `
<Fragment>
  <styled.div>
    <Styled(Card)
      title={
        <styled.img
          src=""
        />
      }
    >
      <styled.p>
        Pedro
      </styled.p>
      <styled.p />
    </Styled(Card)>
    <Styled(Card)
      title={
        <div>
          User Info 
          <Button
            block={false}
            ghost={false}
            htmlType="button"
            loading={false}
            onClick={[Function]}
          >
            Edit
          </Button>
        </div>
      }
    >
      <Descriptions>
        <styled.div>
          <Styled(DescriptionsItem)
            label="Country"
          >
            Country
          </Styled(DescriptionsItem)>
          <Styled(DescriptionsItem)
            label="Gender"
          >
            Gender
          </Styled(DescriptionsItem)>
        </styled.div>
      </Descriptions>
    </Styled(Card)>
  </styled.div>
</Fragment>
`;

exports[`UserProfile renders component without user data without crashing 1`] = `<Fragment />`;
